--- a/index.html
+++ b/index.html
@@ -609,6 +609,210 @@
         </div>
       </div>
 
+      <!--      Customer   -->
+      <div class="main-panel" id="customerForm">
+        <div class="content-wrapper">
+          <div class="row">
+            <div class="col-12 grid-margin">
+              <div class="card">
+                <div class="card-body">
+                  <h4 class="card-title">Customer Manage Form</h4>
+                  <form class="form-sample">
+                    <div class="row">
+                      <div class="col-md-6">
+                        <div class="form-group row">
+                          <label class="col-sm-3 col-form-label">Cus_Name</label>
+                          <div class="col-sm-9">
+                            <input type="text" class="form-control" />
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-md-6">
+                        <div class="form-group row">
+                          <label class="col-sm-3 col-form-label">Gender</label>
+                          <div class="col-sm-9">
+                            <select class="form-control">
+                              <option>Male</option>
+                              <option>Female</option>
+                            </select>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-md-6">
+                        <div class="form-group row">
+                          <label class="col-sm-3 col-form-label">Join Date <br> As a Loyalty</label>
+                          <div class="col-sm-9">
+                            <input class="form-control" type="date" placeholder="dd/mm/yyyy"/>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-md-6">
+                        <div class="form-group row">
+                          <label class="col-sm-3 col-form-label">Level</label>
+                          <div class="col-sm-9">
+                            <select class="form-control">
+                              <option>Gold</option>
+                              <option>Silver</option>
+                              <option>Bronze</option>
+                              <option>New</option>
+                            </select>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-md-6">
+                        <div class="form-group row">
+                          <label class="col-sm-3 col-form-label">Total Point</label>
+                          <div class="col-sm-9">
+                            <input type="number" class="form-control" />
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-md-6">
+                        <div class="form-group row">
+                          <label class="col-sm-3 col-form-label">DOB</label>
+                          <div class="col-sm-9">
+                            <input type="date" class="form-control" />
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-md-6">
+                        <div class="form-group row">
+                          <label class="col-sm-3 col-form-label">Address_01</label>
+                          <div class="col-sm-9">
+                            <input type="text" class="form-control" />
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-md-6">
+                        <div class="form-group row">
+                          <label class="col-sm-3 col-form-label">Address_02</label>
+                          <div class="col-sm-9">
+                            <input type="text" class="form-control" />
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-md-6">
+                        <div class="form-group row">
+                          <label class="col-sm-3 col-form-label">Address_03</label>
+                          <div class="col-sm-9">
+                            <input type="text" class="form-control" />
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-md-6">
+                        <div class="form-group row">
+                          <label class="col-sm-3 col-form-label">Address_04</label>
+                          <div class="col-sm-9">
+                            <input type="text" class="form-control" />
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-md-6">
+                        <div class="form-group row">
+                          <label class="col-sm-3 col-form-label">Address_05</label>
+                          <div class="col-sm-9">
+                            <input type="text" class="form-control" />
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-md-6">
+                        <div class="form-group row">
+                          <label class="col-sm-3 col-form-label">Contact No</label>
+                          <div class="col-sm-9">
+                            <input type="tel" class="form-control" />
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-md-6">
+                        <div class="form-group row">
+                          <label class="col-sm-3 col-form-label">Email</label>
+                          <div class="col-sm-9">
+                            <input type="email" class="form-control" />
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-md-6">
+                        <div class="form-group row">
+                          <label class="col-sm-3 col-form-label">Recent Purchase<br>date & time</label>
+                          <div class="col-sm-9">
+                            <input type="datetime-local" class="form-control" />
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="btn-block mt-6">
+                      <button id="btnCusSave" type="button">Save</button>
+                      <button id="btnCusUpdate" type="button">Update</button>
+                      <button id="btnCusReset" type="reset">Reset</button>
+                    </div>
+                  </form>
+
+                  <!--                  customer table-->
+                  <div class="col-lg-12 stretch-card">
+                    <div class="card">
+                      <div class="card-body">
+                        <h4 class="card-title">Customer Table</h4>
+                        <div class="table-responsive pt-3">
+                          <table class="table table-bordered">
+                            <thead>
+                            <tr>
+                              <th>
+                                Name/Email
+                              </th>
+                              <th>
+                                Gender
+                              </th>
+                              <th>
+                                Join Date As a Loyalty
+                              </th>
+                              <th>
+                                Level
+                              </th>
+                              <th>
+                                Total Point
+                              </th>
+                              <th>
+                                Date of Birth
+                              </th>
+                              <th>
+                                Address
+                              </th>
+                              <th>
+                                Contact
+                              </th>
+                              <th>
+                                Recent Purchase date & time
+                              </th>
+                              <th>
+                                Button
+                              </th>
+                            </tr>
+                            </thead>
+                            <tbody id="customer-tbl"></tbody>
+                          </table>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
     </div>
   </div>
