--- a/index.html
+++ b/index.html
@@ -980,7 +980,7 @@
       </div>
 
       <!--      Inventory   -->
-      <div class="main-panel" id="inventoryForm"x>
+      <div class="main-panel" id="inventoryForm">
         <div class="content-wrapper">
           <div class="row">
             <div class="col-12 grid-margin">
@@ -1255,6 +1255,177 @@
           </div>
         </div>
       </div>
+
+      <!--      Sale   -->
+      <div class="main-panel" id="saleForm">
+        <div class="content-wrapper">
+          <div class="row">
+            <div class="col-12 grid-margin">
+              <div class="card">
+                <div class="card-body">
+                  <h4 class="card-title">Sale Manage Form</h4>
+                  <form class="form-sample">
+                    <div class="row">
+                      <div class="col-md-6">
+                        <div class="form-group row">
+                          <label class="col-sm-3 col-form-label">CustomerName</label>
+                          <div class="col-sm-9">
+                            <select class="form-control">
+                              <option>Select Customer</option>
+                            </select>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-md-6">
+                        <div class="form-group row">
+                          <label class="col-sm-3 col-form-label">Suppler_Name</label>
+                          <div class="col-sm-9">
+                            <select class="form-control">
+                              <option>Select Supplier</option>
+                            </select>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-md-6">
+                        <div class="form-group row">
+                          <label class="col-sm-3 col-form-label">Item</label>
+                          <div class="col-sm-9">
+                            <select class="form-control">
+                              <option>Select Item</option>
+                            </select>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-md-6">
+                        <div class="form-group row">
+                          <label class="col-sm-3 col-form-label">Payment</label>
+                          <div class="col-sm-9">
+                            <select class="form-control">
+                              <option>Select Payment Method</option>
+                            </select>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-md-6">
+                        <div class="form-group row">
+                          <label class="col-sm-3 col-form-label">Item_desc</label>
+                          <div class="col-sm-9">
+                            <input type="text" class="form-control" />
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-md-6">
+                        <div class="form-group row">
+                          <label class="col-sm-3 col-form-label">Address_04</label>
+                          <div class="col-sm-9">
+                            <input type="text" class="form-control" />
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-md-6">
+                        <div class="form-group row">
+                          <label class="col-sm-3 col-form-label">Address_05</label>
+                          <div class="col-sm-9">
+                            <input type="text" class="form-control" />
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-md-6">
+                        <div class="form-group row">
+                          <label class="col-sm-3 col-form-label">Address_06</label>
+                          <div class="col-sm-9">
+                            <input type="text" class="form-control" />
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-md-6">
+                        <div class="form-group row">
+                          <label class="col-sm-3 col-form-label">ContactNo 01</label>
+                          <div class="col-sm-9">
+                            <input type="tel" class="form-control" />
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-md-6">
+                        <div class="form-group row">
+                          <label class="col-sm-3 col-form-label">ContactNo 02</label>
+                          <div class="col-sm-9">
+                            <input type="tel" class="form-control" />
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-md-6">
+                        <div class="form-group row">
+                          <label class="col-sm-3 col-form-label">Email</label>
+                          <div class="col-sm-9">
+                            <input type="email" class="form-control" />
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="btn-block mt-6">
+                      <button id="btnSaleSave" type="button">Save</button>
+                      <button id="btnSaleUpdate" type="button">Update</button>
+                      <button id="btnSaleReset" type="reset">Reset</button>
+                    </div>
+                  </form>
+
+                  <!--              sale table   -->
+                  <div class="col-lg-12 stretch-card">
+                    <div class="card">
+                      <div class="card-body">
+                        <h4 class="card-title">Sale Table</h4>
+                        <div class="table-responsive pt-3">
+                          <table class="table table-bordered">
+                            <thead>
+                            <tr>
+                              <th>
+                                Name
+                              </th>
+                              <th>
+                                Category
+                              </th>
+                              <th>
+                                Address
+                              </th>
+                              <th>
+                                Contact
+                              </th>
+                              <th>
+                                Email
+                              </th>
+                              <th>
+                                Date of Birth
+                              </th>
+                              <th>
+                                Button
+                              </th>
+                            </tr>
+                            </thead>
+                            <tbody id="sale-tbl"></tbody>
+                          </table>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
 
